layout issue

--- a/app/assets/stylesheets/mastermind.scc.scss
+++ b/app/assets/stylesheets/mastermind.scc.scss
@@ -53,6 +53,7 @@ div.bank {
     }
 }
 div.big{
+    width:700px;
     margin-top: 20px;
     font-size: large;
     color: red;
